-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.2
-
-
2a6e8582f (dev), f64ba5dec (dev), 8942272f4 (6.10), 8fdc7ae08 (6.10), 63051ed52 (6.9), 8347238db (6.9), 86ae96d9c (tqtc/lts-6.8), 030155a54 (tqtc/lts-6.8)
Description:
When using a connection to a signal with an enum type parameter, the compiler incorrectly issues warnings about type coercion if the annotation is anything more specific than int. It should correctly recognize either the actual enum type or at least enumeration, but both of these result in warnings.
Steps to Reproduce:
- Open the attached example project.
- Observe the four connections to the same signal, each using different annotations.
- Build the project and note that the two most specific annotations generate warnings, while the least specific do not.
- Click the "Login" button to trigger the signal.
Expected Behavior:
The compiler should correctly interpret the enum type without issuing coercion warnings when using enumeration or the actual enum type.
Actual Behavior:
Warnings are incorrectly generated for more specific annotations, while broader ones (int) do not trigger warnings.
Attachments:
A minimal example project is attached to demonstrate the issue.
- relates to
-
QTBUG-15483 Allow using enums as properties in QML
-
- Open
-
| For Gerrit Dashboard: QTBUG-135255 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 651056,17 | Qml: Warn about using enums as type annotations in functions | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 651399,6 | qmllint: Warn about using enums as type annotations in functions | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 652046,3 | Qml: Warn about using enums as type annotations in functions | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 652050,3 | qmllint: Warn about using enums as type annotations in functions | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 652229,3 | Qml: Warn about using enums as type annotations in functions | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 652230,3 | qmllint: Warn about using enums as type annotations in functions | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 652527,3 | Qml: Warn about using enums as type annotations in functions | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 652528,3 | qmllint: Warn about using enums as type annotations in functions | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 653505,1 | Qml: Warn about using enums as type annotations in functions | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: ABANDONED | 0 | 0 |
| 653507,1 | qmllint: Warn about using enums as type annotations in functions | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: ABANDONED | 0 | 0 |